<resources>
    <string name="app_name">TravelLedger</string>
    <string name="sheets">明細</string>
    <string name="title_activity_settings">Settings</string>


    <!-- General settings -->
    <string name="setting_exchange_rate">匯率:</string>
    <string name="setting_tax_rate">稅率:</string>
    <string name="setting_default_discount">預設折扣:</string>
    <string name="setting_default_tips">預設小費:</string>

    <!-- Add item dialog -->
    <string name="add_item_dialog_name">名稱:</string>
    <string name="add_item_dialog_price">單價:</string>
    <string name="add_item_dialog_amount">數量:</string>
    <string name="add_item_dialog_tax_include">含稅</string>
    <string name="add_item_dialog_tax_not_include">不含稅:</string>


    <string name="add_sheet_dialog_name">名稱:</string>
    <string name="add_sheet_dialog_price">總花費:</string>
    <string name="add_sheet_dialog_type">類別:</string>
    <string name="add_sheet_dialog_payment">付款方式:</string>
    <string name="add_sheet_dialog_date">日期:</string>
    <string name="next_step">下一步</string>
    <string name="cancel">取消</string>
    <string name="statistics">統計</string>

</resources>
