<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:id="@+id/LinearLayout_add_item_dialog"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_dialog_name"
            android:id="@+id/textView5"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_add_dialog_name"
            android:textSize="16dp"
            android:paddingLeft="8dp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_dialog_price"
            android:id="@+id/textView6"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText_add_dialog_price"
            android:textSize="16dp"
            android:paddingLeft="8dp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_dialog_amount"
            android:id="@+id/textView7"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText_add_dialog_amount"
            android:textSize="16dp"
            android:text="1"
            android:paddingLeft="8dp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_dialog_tax_not_include"
            android:id="@+id/radioButton_not_include_tax"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_dialog_tax_include"
            android:id="@+id/radioButton_include_tax"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

    </RadioGroup>


</LinearLayout>