<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="brandon.tsai.travelledger.SaveSheetActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="2dp">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/button_back"
            android:background="@drawable/left2"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:id="@+id/textView3"
            android:textColor="#1da865"
            android:textSize="22dp"
            android:textStyle="bold|normal|italic"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:singleLine="true" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/button_save_sheet"
            android:background="@drawable/save"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:nestedScrollingEnabled="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/add_sheet_dialog_name"
            android:id="@+id/textView"
            android:gravity="right" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_sheet_name"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:text="@string/add_sheet_dialog_price"
            android:gravity="right"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_sheet_price"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:selectAllOnFocus="true"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/add_sheet_dialog_date"
            android:id="@+id/textView12"
            android:gravity="right"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_sheet_date"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:selectAllOnFocus="true"
            android:layout_gravity="center_vertical"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:text="@string/add_sheet_dialog_payment"
            android:gravity="right"
            android:layout_gravity="center_vertical" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radiogroup_sheet_payment">

            <RadioButton
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="Cash"
                android:id="@+id/radioButton_sheet_pay_cash"
                android:checked="true" />

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Credit Cart"
                android:id="@+id/radioButton_sheet_pay_creditcard"
                android:checked="false" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:text="@string/add_sheet_dialog_type"
            android:gravity="right"
            android:layout_gravity="center_vertical" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup_sheet_type"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:id="@+id/radioBtn_sheet_type_food"
                android:clickable="true"
                android:text="Food"
                android:checked="true" />

            <RadioButton
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:id="@+id/radioBtn_sheet_type_shop"
                android:clickable="true"
                android:text="Shop" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/radioBtn_sheet_type_transport"
                android:clickable="true"
                android:text="Transport"
                android:layout_gravity="top" />

            <RadioButton
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:id="@+id/radioBtn_sheet_type_hotel"
                android:clickable="true"
                android:text="Hotel" />

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioBtn_sheet_type_other"
                android:clickable="true"
                android:text="Others" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
